main/dovecot: upgrade to 2.4.0
Requires config updates
https://doc.dovecot.org/2.4.0/installation/upgrade/2.3-to-2.4.html

--- a/main/dovecot/APKBUILD
+++ b/main/dovecot/APKBUILD
@@ -6,14 +6,14 @@
 # Contributor: Niklas Meyer <derlinkman@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=dovecot
-pkgver=2.3.21.1
+pkgver=2.4.0
 # rebuild community/dovecot-fts-xapian on version changes
 case "$pkgver" in
 	*.*.*.*) _pkgverminor=${pkgver%.*.*};;
 	*.*.*) _pkgverminor=${pkgver%.*};;
 esac
-pkgrel=1
-_pigeonholever=0.5.21.1
+pkgrel=0
+_pigeonholever=2.4.0
 pkgdesc="IMAP and POP3 server"
 url="https://www.dovecot.org/"
 arch="all"
@@ -63,24 +63,15 @@ subpackages="
 	$pkgname-ldap
 	$pkgname-lua
 	$pkgname-fts-solr:_fts_solr
-	$pkgname-fts-lucene:_fts_lucene
 	"
 source="https://www.dovecot.org/releases/$_pkgverminor/dovecot-$pkgver.tar.gz
-	$pkgname-pigeonhole-$_pigeonholever.tar.gz::https://pigeonhole.dovecot.org/releases/$_pkgverminor/dovecot-$_pkgverminor-pigeonhole-$_pigeonholever.tar.gz
-	CVE-2022-30550.patch
+	$pkgname-pigeonhole-$_pigeonholever.tar.gz::https://pigeonhole.dovecot.org/releases/$_pkgverminor/dovecot-pigeonhole-$_pigeonholever.tar.gz
 	skip-iconv-check.patch
-	split-protocols.patch
-	default-config.patch
-	fix-out-of-memory-test.patch
-	fix-libssl_iostream_openssl.patch
-	fix-test-file-cache.patch
-	test-imap-client-hibernate.patch
-	submission-proxy-Add-IPV6-prefix-to-IPv6-addresses.patch
-	Support-openssl-3.0.patch
+	headers.patch
 	dovecot.logrotate
 	dovecot.initd
 	"
-_builddir_pigeonhole="$srcdir/$pkgname-$_pkgverminor-pigeonhole-$_pigeonholever"
+_builddir_pigeonhole="$srcdir/$pkgname-pigeonhole-$_pigeonholever"
 options="!check" # tests being weird
 
 # secfixes:
@@ -156,7 +147,6 @@ build() {
 		--with-sqlite \
 		--with-pgsql \
 		--with-solr \
-		--with-lucene \
 		--with-bzlib \
 		--with-icu \
 		--with-lz4 \
@@ -195,29 +185,29 @@ package() {
 	rm ./etc/dovecot/*
 	rm ./usr/share/doc/dovecot/mkcert.sh
 	mv ./usr/share/doc/dovecot/dovecot-openssl.cnf ./etc/dovecot/
-	mv ./usr/share/doc/dovecot/example-config/dovecot* \
-		./usr/share/doc/dovecot/example-config/conf.d \
-		./etc/dovecot/
-	rm -fr ./usr/share/doc/dovecot/example-config
+#	mv ./usr/share/doc/dovecot/example-config/dovecot* \
+#		./usr/share/doc/dovecot/example-config/conf.d \
+#		./etc/dovecot/
+#	rm -fr ./usr/share/doc/dovecot/example-config
 
 	# Fix SSL dirs in default config.
-	sed -i -e 's,^ssl_cert =.*,ssl_cert = </etc/ssl/dovecot/server.pem,' \
-		-e 's,^ssl_key =.*,ssl_key = </etc/ssl/dovecot/server.key,' \
-		./etc/dovecot/conf.d/10-ssl.conf
+#	sed -i -e 's,^ssl_cert =.*,ssl_cert = </etc/ssl/dovecot/server.pem,' \
+#		-e 's,^ssl_key =.*,ssl_key = </etc/ssl/dovecot/server.key,' \
+#		./etc/dovecot/conf.d/10-ssl.conf
 
 	# Set default passdb to passwd and create appropriate 'users' file.
-	install -m 640 -o dovecot -g mail /dev/null ./etc/dovecot/users
-	sed -i -e 's,!include auth-system.conf.ext,!include auth-passwdfile.conf.ext,' \
-		-e 's,#!include auth-passwdfile.conf.ext,#!include auth-system.conf.ext,' \
-		./etc/dovecot/conf.d/10-auth.conf
+#	install -m 640 -o dovecot -g mail /dev/null ./etc/dovecot/users
+#	sed -i -e 's,!include auth-system.conf.ext,!include auth-passwdfile.conf.ext,' \
+#		-e 's,#!include auth-passwdfile.conf.ext,#!include auth-system.conf.ext,' \
+#		./etc/dovecot/conf.d/10-auth.conf
 
 	# Installing pigeonhole plugin.
 	cd "$_builddir_pigeonhole"
 	make install DESTDIR="$pkgdir"
 
 	# Moving config in the correct place
-	mv "$pkgdir"/usr/share/doc/dovecot/example-config/conf.d/* \
-		"$pkgdir"/etc/dovecot/conf.d
+#	mv "$pkgdir"/usr/share/doc/dovecot/example-config/conf.d/* \
+#		"$pkgdir"/etc/dovecot/conf.d
 
 	# Remove libtool archives.
 	find "$pkgdir" -name '*.la' -exec rm -f {} +
@@ -253,7 +243,7 @@ _protocol() {
 
 	cd "$pkgdir"
 	_submv usr/libexec/dovecot/"$name"*
-	_submv etc/dovecot/conf.d/*-"$name".conf
+#	_submv etc/dovecot/conf.d/*-"$name".conf
 
 	mkdir -p "$protocolsd"
 	echo "protocols = \$protocols $name" \
@@ -348,14 +338,6 @@ _fts_solr() {
 	_find usr/lib/dovecot fts\*solr
 }
 
-_fts_lucene() {
-	pkgdesc="FTS-Lucene plugin for dovecot"
-	depends="$pkgname=$pkgver-r$pkgrel"
-
-	cd "$pkgdir"
-	_find usr/lib/dovecot fts\*lucene
-}
-
 _find() {
 	local _f
 	local _ff="$(find "$1" -name \*"$2"\*)"
@@ -373,18 +355,10 @@ _submv() {
 }
 
 sha512sums="
-9de6ce3a579ef2040248b692874a6d64a732bb735a9cee3144604927cad49690c4b0e29f7ecf3af23190d56f30956d955d13acd5d352534df62fbdfde4b60f9f  dovecot-2.3.21.1.tar.gz
-7387b417611599fe70d1a83d3b408321e66f5a883bf78a9d55c7496b1a17220677daebaefde2061e0d7064fe07c410ecfc64662878bb253ddcd9e128dd83fbaa  dovecot-pigeonhole-0.5.21.1.tar.gz
-b2ff67fd8b6c5cea93877651a1168ef1a5d399cc5f1a61d1cce407c7624f5b6d758996084c6a5714b6880de0ce11ce5eac74a1e02918758cb6983caedb651c58  CVE-2022-30550.patch
+25455f368d850c024c92fdcc814f89d2c5f5583ec84ecaf048b15f13b6f90729ca256bb1b6b2cec46eab129fc78f4600716a72a5f56877479df5d18313b0c526  dovecot-2.4.0.tar.gz
+489d6c89f74ca66d0c94a4d701ad64cf94e0feadc7da6026a98735bde9d24d2be24c25ab296aee0287745f3a522a12ae071382dcef5143c1333dc843bcfce3aa  dovecot-pigeonhole-2.4.0.tar.gz
 fe4fbeaedb377d809f105d9dbaf7c1b961aa99f246b77189a73b491dc1ae0aa9c68678dde90420ec53ec877c08f735b42d23edb13117d7268420e001aa30967a  skip-iconv-check.patch
-794875dbf0ded1e82c5c3823660cf6996a7920079149cd8eed54231a53580d931b966dfb17185ab65e565e108545ecf6591bae82f935ab1b6ff65bb8ee93d7d5  split-protocols.patch
-0d8f89c7ba6f884719b5f9fc89e8b2efbdc3e181de308abf9b1c1b0e42282f4df72c7bf62f574686967c10a8677356560c965713b9d146e2770aab17e95bcc07  default-config.patch
-733cdbfb7f6b2608470bd30a0f9190ec86099d4c8e48b7fb92d7b595be665bf749976889033e1ad438edd3f99f2e0d496dd0d667291915c80df82f7e62483f59  fix-out-of-memory-test.patch
-0fb56eb9c7fae8d8b1d794928ce2ba58d03c102cd7c3f959799c62c5d838ff535ecccb64bc1970d960f67d49388c880773e9eac5aed3bcf92e6efed3b56cc837  fix-libssl_iostream_openssl.patch
-bfa8f18cce438bbf55cfaa2164358424f04393365aa98ebc342dc2677b48bf8fb16bdb1803aba18ad74fe8494bb7d2091569c430086ed2b47d13100ae5e9ffab  fix-test-file-cache.patch
-33c6eefaaca755c7766c74cb1afdc54fa9241b3d75b1db6b1167615061b5d79b85d759746c2d1793f4a3669d493489236e89ca4278dd38dd681f537c83e81a20  test-imap-client-hibernate.patch
-6a8d2f6d36218a73766c0b8df64b0b6ec98e010d0d2e06de48144f701cfc2a36413c4a3dce0a33eafd5f022d8b796d5a80116097adf2ad1a9f34fecdeaf07da5  submission-proxy-Add-IPV6-prefix-to-IPv6-addresses.patch
-b24db39cce6c388ab85eab7a9c161eb10ee871f5d78c7778e40a43acc3711486b4259dbbaef40c54efce55d3c8ca7cc8841adbe8528d75c6e8d60ba08b75df79  Support-openssl-3.0.patch
+043620ea5d89d561f8f4ebb725368eba5133f1a4e2ff6d682a4abef9d15e04d638a56f4322d34645b1a7e6db0fdd7bf73692771012de903401b9ea25353c354c  headers.patch
 9f19698ab45969f1f94dc4bddf6de59317daee93c9421c81f2dbf8a7efe6acf89689f1d30f60f536737bb9526c315215d2bce694db27e7b8d7896036a59c31f0  dovecot.logrotate
 d91951b81150d7a3ef6a674c0dc7b012f538164dac4b9d27a6801d31da6813b764995a438f69b6a680463e1b60a3b4f2959654f68e565fe116ea60312d5e5e70  dovecot.initd
 "
