main/dovecot: build flatcurve
flatcurve is now shipped with dovecot

--- a/main/dovecot/APKBUILD
+++ b/main/dovecot/APKBUILD
@@ -12,7 +12,7 @@ case "$pkgver" in
 	*.*.*.*) _pkgverminor=${pkgver%.*.*};;
 	*.*.*) _pkgverminor=${pkgver%.*};;
 esac
-pkgrel=1
+pkgrel=2
 _pigeonholever=2.4.0
 pkgdesc="IMAP and POP3 server"
 url="https://www.dovecot.org/"
@@ -42,6 +42,7 @@ makedepends="
 	openldap-dev
 	openssl-dev>3
 	sqlite-dev
+	xapian-core-dev
 	zlib-dev
 	zstd-dev
 	"
@@ -62,7 +63,8 @@ subpackages="
 	$pkgname-gssapi
 	$pkgname-ldap
 	$pkgname-lua
-	$pkgname-fts-solr:_fts_solr
+	$pkgname-fts-solr:_fts_solr \
+	$pkgname-fts-flatcurve:_fts_flatcurve
 	"
 source="https://www.dovecot.org/releases/$_pkgverminor/dovecot-$pkgver.tar.gz
 	$pkgname-pigeonhole-$_pigeonholever.tar.gz::https://pigeonhole.dovecot.org/releases/$_pkgverminor/dovecot-pigeonhole-$_pigeonholever.tar.gz
@@ -120,8 +122,6 @@ prepare() {
 	default_prepare
 	update_config_sub
 
-	autoreconf -vi
-
 	cd "$_builddir_pigeonhole"
 	update_config_sub
 
@@ -148,6 +148,7 @@ build() {
 		--with-ldap=plugin \
 		--with-sql=plugin \
 		--with-lua=plugin \
+		--with-flatcurve \
 		--with-mysql \
 		--with-sqlite \
 		--with-pgsql \
@@ -155,12 +156,9 @@ build() {
 		--with-bzlib \
 		--with-icu \
 		--with-lz4 \
-		--with-lzma \
 		--with-sodium \
 		--with-stemmer \
-		--with-zlib \
 		--with-zstd \
-		--with-ssl=openssl \
 		--with-ssldir=/etc/ssl/dovecot \
 		--with-rundir=/run/dovecot
 	make
@@ -341,6 +339,14 @@ _fts_solr() {
 
 	cd "$pkgdir"
 	_find usr/lib/dovecot fts\*solr
+}
+
+_fts_flatcurve() {
+	pkgdesc="FTS-flatcurve plugin for dovecot"
+	depends="$pkgname=$pkgver-r$pkgrel"
+
+	cd "$pkgdir"
+	_find usr/lib/dovecot fts\*flatcurve
 }
 
 _find() {
