--- a/main/gettext/APKBUILD
+++ b/main/gettext/APKBUILD
@@ -2,8 +2,8 @@
 # Contributor: Valery Kartel <valery.kartel@gmail.com>
 # Maintainer: Carlo Landmeter <clandmeter@alpinelinux.org>
 pkgname=gettext
-pkgver=0.22.5
-pkgrel=2
+pkgver=0.24
+pkgrel=0
 pkgdesc="GNU locale utilities"
 url="https://www.gnu.org/software/gettext/gettext.html"
 arch="all"
@@ -12,7 +12,7 @@ license="GPL-3.0-or-later AND LGPL-2.1-or-later AND MIT"
 # they depend on gettext and would introduce cyclic dependencies
 # xz for autopoint autoreconf
 depends_dev="!musl-libintl xz"
-makedepends="perl ncurses-dev libxml2-dev libunistring-dev"
+makedepends="perl ncurses-dev libxml2-dev~2.13 libunistring-dev"
 checkdepends="coreutils"
 subpackages="
 	$pkgname-dbg
@@ -27,7 +27,6 @@ subpackages="
 	"
 source="https://ftp.gnu.org/gnu/gettext/gettext-$pkgver.tar.xz
 	cwd.patch
-	musl-realpath.patch
 	skip-tests-musl.patch
 	"
 
@@ -87,8 +86,7 @@ _envsubst() {
 }
 
 sha512sums="
-a60999bb9d09441f138214d87acb7e59aab81e765bb9253a77c54902681c5de164a5a04de2a9778dfb479dbdefaab2d5de1fbaf6095c555c43e7e9fd7a1c09bd  gettext-0.22.5.tar.xz
+8e362d99f5e2e13b7d3dd71b80d6fe53e4337fc2ca9cc75d23b7635caae20262f3f6ee6f4665e1db64ff56b99a0afa1411f0c859673428e8b81a7943feec1549  gettext-0.24.tar.xz
 31796534e40c1569b08cf48e25375ca1d0f439df8aa0d24283769d52a290e28522760128f11f5bd04217605974ae1fdee9557ec189ed32b11b2a45b4af3b0f4a  cwd.patch
-c423b7f5610f03af63ed5327801be47fecc1d3de66cb018b32d05179a62889156cefb6d302686e9ecd81421951a5aa5e4c5a7d911823fc41d4c52ad2387e0719  musl-realpath.patch
 a16963f804ce4abe8480da211228f7b24a0715d6ef3ff7d5e5c58a1387d6c4260ee237864081b05b164f082ef199a592494ce691dd0c96c61978e4c451707c7a  skip-tests-musl.patch
 "
