community/enchant2: update URL

--- a/community/enchant2/APKBUILD
+++ b/community/enchant2/APKBUILD
@@ -4,7 +4,7 @@ pkgname=enchant2
 pkgver=2.8.2
 pkgrel=1
 pkgdesc="wrapper library for generic spell checking (v2)"
-url="https://abiword.github.io/enchant/"
+url="https://rrthomas.github.io/enchant/"
 arch="all"
 license="LGPL-2.1-or-later"
 makedepends="
@@ -27,7 +27,7 @@ subpackages="
 	$pkgname-nuspell
 	"
 options="!check" # needs unpackaged unittest-cpp
-source="https://github.com/AbiWord/enchant/releases/download/v$pkgver/enchant-$pkgver.tar.gz"
+source="https://github.com/rrthomas/enchant/releases/download/v$pkgver/enchant-$pkgver.tar.gz"
 builddir="$srcdir/enchant-$pkgver"
 
 build() {
