community/kdb: fix build with ICU 76
We need build with C++17

ref: https://invent.kde.org/libraries/kdb/-/commit/f32e5c03d18977d32b1eb5df2deb2a908ff4780c

--- a/community/kdb/APKBUILD
+++ b/community/kdb/APKBUILD
@@ -25,6 +25,7 @@ source="https://download.kde.org/stable/kdb/src/kdb-$pkgver.tar.xz
 	0001-fix-build-with-newer-qt.patch
 	0002-fix-build-with-postgresql-12+.patch
 	cmake-postgresql12+.patch
+	fix-build-with-newer-ICU.patch
 	"
 
 build() {
@@ -71,4 +72,5 @@ sha512sums="
 7fc18bd99d45ed6f874d7aceff271d6262bae550340b243414026c1683837a27b6e261a992a187f4fbebfdf5ac5fd67400528b6d1b3b9c33abb35fe4237989bf  0001-fix-build-with-newer-qt.patch
 c7d6fe068bf1dfd206d96e1214595d7001ce03cc591837bbb1e500d440178d95eedb3f07d2fe4a5d9c07fcfe6dad0ee5e0a74ede5ecca4e09572dea1ca35110b  0002-fix-build-with-postgresql-12+.patch
 7b1cba582598923a7aba98d8fc922f48b4388bf56adf3e7926a9ee49f68db2616132527ac1c86e517ff9aa05c7633a813103cf7ed0714fa04bf36bf0a8da58ba  cmake-postgresql12+.patch
+9d79de4b809249a73331da155c073fc53f05bc59e12adb9982e30891ae2a044452597ed6e172c7dff14bb6a14d38045dd27655c36f666763ff4eae71d13decaa  fix-build-with-newer-ICU.patch
 "
