community/py3-qt6: upgrade to 6.8.1

--- a/community/py3-qt6/APKBUILD
+++ b/community/py3-qt6/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Rosie K Languet <rkl@rosiesworkshop.net>
 # Maintainer: Rosie K Languet <rkl@rosiesworkshop.net>
 pkgname=py3-qt6
-pkgver=6.7.1
+pkgver=6.8.1
 pkgrel=0
 pkgdesc="Python 3 bindings for the Qt toolkit"
 url="https://www.riverbankcomputing.com/software/pyqt/"
@@ -31,8 +31,8 @@ makedepends="
 	"
 
 subpackages="$pkgname-pyc"
-source="https://pypi.python.org/packages/source/P/PyQt6/PyQt6-$pkgver.tar.gz"
-builddir="$srcdir/PyQt6-$pkgver"
+source="https://pypi.python.org/packages/source/p/pyqt6/pyqt6-$pkgver.tar.gz"
+builddir="$srcdir/pyqt6-$pkgver"
 
 # FIXME: we have issues upgrading or even rebuilding py3-qt6, possibly since the
 # qt6-qtbase upgrade to 6.7.2, so don't upgrade or rebuild for now.
@@ -65,5 +65,5 @@ package() {
 }
 
 sha512sums="
-1e0fec009e1823b06460fd96eddc00ed31388c20f6d832aa0ebaa130baf06d83514df43af7961c3cb2872570d27e539d6db7bf6143ccdfd61a19da7521be2c7e  PyQt6-6.7.1.tar.gz
+87727369168fde6e3edc488f96dd13d537f026e207e4b4ab1c95d09bf85859512a117dfc801249e0891425a6b5579830724e4145f370e2ef9909788f56eb4df6  pyqt6-6.8.1.tar.gz
 "
