community/liblcf: fix build with icu 76
requires C++17.

ref: https://github.com/EasyRPG/liblcf/commit/8c782e54ba244981141d91e7d44922952563677c

--- a/community/liblcf/APKBUILD
+++ b/community/liblcf/APKBUILD
@@ -13,6 +13,7 @@ install="$pkgname.post-install"
 subpackages="$pkgname-dev $pkgname-tools:_tools"
 source="https://github.com/EasyRPG/liblcf/archive/refs/tags/$pkgver/liblcf-$pkgver.tar.gz
 	include-cstdint.patch
+	Require-C++17.patch
 	"
 
 build() {
@@ -44,4 +45,5 @@ _tools() {
 sha512sums="
 54f3c2d330e82cbf7a17256cfe9a17e968895bb58968c212d4e3604d79f9c1e0492163ab01c53f060cffd8ee7f4280bb8ac939be110927f6a524c1799ba335b5  liblcf-0.8.tar.gz
 e52609272e6416e20f961553d711acc08671029f77b8c54d8e6cb8da0c4cfa7d6aacd68c918ad81f634fba1d68e3342b61f52a13bb5b39acda256f2baebcf2b4  include-cstdint.patch
+7a2d1161fa6a93480bbaa63effe38df052bd217542272775f419876d7d72238144034dba84e61a5e8e3396dd7a15abd3db836ade6f421119bf02e40b9ec8dcaf  Require-C++17.patch
 "
