community/xerces-c: fix build with ICU 76
requires c++17

--- a/community/xerces-c/APKBUILD
+++ b/community/xerces-c/APKBUILD
@@ -9,7 +9,9 @@ arch="all"
 license="Apache-2.0"
 makedepends="cmake curl-dev icu-dev samurai"
 subpackages="$pkgname-samples $pkgname-doc $pkgname-dev"
-source="$pkgname-$pkgver.tar.gz::https://github.com/apache/xerces-c/archive/v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/apache/xerces-c/archive/v$pkgver.tar.gz
+	c++17.patch
+	"
 
 # secfixes:
 #   3.2.5-r0:
@@ -50,4 +52,5 @@ samples() {
 
 sha512sums="
 55bf16456408af7c5aa420a55b27555889fc102a24e86aecb918c165acc80bbc344420687061e020fe223ea04dd78bef929ceedc4b3e24727787f12b8d79b610  xerces-c-3.2.5.tar.gz
+e67dc17892305d4dc8e1a409ab0ed1b62c242c4bead55946a629ba4e01da4cb6067c880c62e61550a529f00963c45951e00fb942ef693cd4a843cb77ec22415b  c++17.patch
 "
