--- a/community/slop/APKBUILD
+++ b/community/slop/APKBUILD
@@ -22,7 +22,9 @@ makedepends="
 	samurai
 	"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-libs"
-source="$pkgname-$pkgver.tar.gz::https://github.com/naelstrof/slop/archive/v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/naelstrof/slop/archive/v$pkgver.tar.gz
+	c++17.patch
+	"
 options="!check" # No tests
 
 build() {
@@ -44,4 +46,5 @@ package() {
 
 sha512sums="
 d1abc50cad124cfb11e9b57c38c824efb2ece3dffce8e54e451ce4adc4a7ad441c6171b7df5d1c8dfa66c875a12cf07b206ba3b87229c0e5f2ddf744d7922fc3  slop-7.6.tar.gz
+3bf997855e27f9726935d30d3cac6aa54c532691ac8965148bc2659ed429266ebd88de076495843ca2d927160c771ebbc4e791b2783e551e3d7419ee3f96cd74  c++17.patch
 "
