--- a/community/maim/APKBUILD
+++ b/community/maim/APKBUILD
@@ -22,7 +22,8 @@ makedepends="
 	slop-dev
 	"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/naelstrof/maim/archive/v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/naelstrof/maim/archive/v$pkgver.tar.gz
+	c++17.patch"
 
 build() {
 	if [ "$CBUILD" != "$CHOST" ]; then
@@ -48,4 +49,5 @@ package() {
 
 sha512sums="
 f91ba00e436514d2d0eecc664c02dd45c53750045b5bc4abbc2cfbf64159085e83736e820c54fa819b4d82b0905a3cfe76a5227db49dd54238f655fd4899cd6c  maim-5.7.4.tar.gz
+919e609f15783e8a79135d86ea48d3e9299027312f433f635dff570f11a2d36b02701140e23b448900413a87eac0fe5663759935469e2d5d4a417806199c9eb3  c++17.patch
 "
