community/coreboot-tools: add cbfstool subpackage

--- a/community/coreboot-tools/APKBUILD
+++ b/community/coreboot-tools/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Adam Thiede <me@adamthiede.com>
 pkgname=coreboot-tools
 pkgver=24.12
-pkgrel=0
+pkgrel=1
 pkgdesc="Tools from the coreboot project"
 url="https://review.coreboot.org/coreboot"
 # coreboot only runs on x86_64 and x86 systems
@@ -20,6 +20,10 @@ makedepends="
 	zlib-dev
 	"
 subpackages="$pkgname-intelmetool $pkgname-ectool $pkgname-nvramtool $pkgname-nvramtool-doc:nvramtool_doc:noarch $pkgname-ifdtool $pkgname-cbmem $pkgname-configurator"
+case "$CARCH" in
+	x86_64) subpackages="$subpackages $pkgname-cbfstool" ;;
+esac
+
 source="
 https://coreboot.org/releases/coreboot-$pkgver.tar.xz
 "
@@ -85,6 +89,14 @@ cbmem() {
 configurator() {
 	pkgdesc="Graphical NVRAMtool frontend"
 	DESTDIR="$subpkgdir" meson install --no-rebuild -C $builddir/util/coreboot-configurator/output
+}
+
+cbfstool() {
+	pkgdesc="Management utility for CBFS formatted ROM images"
+	# x86_64 only - memcpy is out of bounds on x86
+
+	make -e -C "$builddir"/util/cbfstool cbfstool
+	make -e -C "$builddir"/util/cbfstool cbfstool PREFIX="$subpkgdir/usr" install
 }
 
 sha512sums="
