--- a/community/wpewebkit/APKBUILD
+++ b/community/wpewebkit/APKBUILD
@@ -1,10 +1,10 @@
 # Contributor: David Demelier <markand@malikania.fr>
 # Maintainer: David Demelier <markand@malikania.fr>
 pkgname=wpewebkit
-pkgver=2.40.5
-pkgrel=3
+pkgver=2.46.6
+pkgrel=0
 pkgdesc="WebKit port optimized for embedded devices"
-url="https://wpewebkit.org"
+url="https://wpewebkit.org/"
 arch="all"
 license="other"
 _llvmver=18
@@ -21,6 +21,7 @@ makedepends="
 	gst-plugins-base-dev
 	gtk-doc
 	harfbuzz-dev
+	libjxl-dev
 	lcms2-dev
 	libavif-dev
 	libepoxy-dev
@@ -46,9 +47,6 @@ makedepends="
 subpackages="$pkgname-dev $pkgname-doc"
 source="https://wpewebkit.org/releases/wpewebkit-$pkgver.tar.xz
 	armv6kz.patch
-	initial-exec.patch
-	libxml2-2.12.patch
-	patch-gettext.patch
 	"
 options="!check"
 
@@ -101,6 +99,8 @@ build() {
 		-DPORT=WPE \
 		-DENABLE_MINIBROWSER=On \
 		-DENABLE_JOURNALD_LOG=Off \
+		-DUSE_LIBBACKTRACE=False \
+		-DUSE_SYSTEM_SYSPROF_CAPTURE=NO \
 		-GNinja \
 		$CMAKE_CROSSOPTS .
 	cmake --build build
@@ -111,9 +111,6 @@ package() {
 }
 
 sha512sums="
-5874eedb6c605ee0663bf70f75c35b7badb3330bcd1bd36671ac3be1beee1bf27f0cfc1875fa5c1841ceb0030c0e7bd278fae7877921c29f365a5c377d8f134d  wpewebkit-2.40.5.tar.xz
+459921bc383dd4618bc206ecf007b6d48b4e099037685b68cf2734d58456ab2faa5b9030c1a246d0006ebaf33842cbb1d8c286d7d96ba0cc9a3b7c79daafad5d  wpewebkit-2.46.6.tar.xz
 8c89d4ac737a2bd6d970fec3ecb9d0b72d61ffb9a37d4b0b56bc0106914398a65319e940c593c0305fc40d6900aac2a8b4fc3bafc9a96062063d15abd1f5039d  armv6kz.patch
-26f3df81758068a83bf770e1f8b48546e9ec2428d23cbc4e1c5cc7851c91ad1dfeeac89aea73568a5f498cd6c053aaab7e1af67e59a471ad2d0375c1c64cbd8a  initial-exec.patch
-d583ddc3d99fe6231c7073c6c8961e7ec7c418464d512a31efaced4a9f686712b3b48536ab9703cf602874f8e0209102fe1d9100936b80fd216eb758aceea6a2  libxml2-2.12.patch
-4316330f0c42fcfe800210bdbeabbb6bdcf532b71e2761550b8a753499d801fd0405cc961a516dfddfc28c3a6cf0c17b6db461ff51158238b8d874bf75b799f2  patch-gettext.patch
 "
