--- a/main/llvm16/APKBUILD
+++ b/main/llvm16/APKBUILD
@@ -10,7 +10,7 @@ _pkgname=llvm
 pkgver=16.0.6
 _majorver=${pkgver%%.*}
 pkgname=$_pkgname$_majorver
-pkgrel=8
+pkgrel=9
 pkgdesc="Low Level Virtual Machine compiler system, version $_majorver"
 arch="all"
 url="https://llvm.org/"
@@ -18,8 +18,8 @@ license="Apache-2.0"
 depends_dev="$pkgname=$pkgver-r$pkgrel libffi-dev zlib-dev zstd-dev"
 # See https://gitlab.alpinelinux.org/alpine/aports/-/commit/51d2fba931fb2ef0046dea19405a9290c8735051#note_234651
 [ -z "$BOOTSTRAP" ] && depends_dev="$depends_dev $pkgname-test-utils=$pkgver-r$pkgrel"
-makedepends_host="$depends_dev binutils-dev libxml2-dev"
-makedepends_build="cmake chrpath python3 py3-setuptools samurai"
+makedepends_host="$depends_dev binutils-dev curl-dev libxml2-dev"
+makedepends_build="chrpath cmake python3 py3-setuptools samurai"
 # diffutils for diff: unrecognized option: strip-trailing-cr
 # coreutils for 'od' binary
 checkdepends="bash coreutils diffutils"
@@ -172,6 +172,7 @@ build() {
 		-DLLVM_BUILD_LLVM_DYLIB=ON \
 		-DLLVM_BUILD_TESTS="$(want_check && echo ON || echo OFF)" \
 		-DLLVM_ENABLE_ASSERTIONS=OFF \
+		-DLLVM_ENABLE_CURL=FORCE_ON \
 		-DLLVM_ENABLE_DUMP=ON \
 		-DLLVM_ENABLE_EH=ON \
 		-DLLVM_ENABLE_FFI=ON \
