main/llvm15: Build with curl to fix debuginfod client support
For debuginfod client functionality in LLVM tooling (like llvm-symbolizer or
llvm-debuginfod-find) to actually work, LLVM needs to be build with curl (see
[0] and #16972). Otherwise, HTTP requests get turned into no-ops, resulting in
debuginfod functionality to fail (without any useful error messages). The
configuration option is the same across all currently available LLVM versions
and we will enable it one by one to not have one single MR with very long build
times.

It has been verified that cross-compiliation (via 'bootstrap.sh') still works.

[0]: https://reviews.llvm.org/D111238

--- a/main/llvm15/APKBUILD
+++ b/main/llvm15/APKBUILD
@@ -10,7 +10,7 @@ _pkgname=llvm
 pkgver=15.0.7
 _majorver=${pkgver%%.*}
 pkgname=$_pkgname$_majorver
-pkgrel=14
+pkgrel=15
 pkgdesc="Low Level Virtual Machine compiler system, version $_majorver"
 arch="all !loongarch64"
 url="https://llvm.org/"
@@ -19,8 +19,8 @@ install="$pkgname.pre-upgrade"
 depends_dev="$pkgname=$pkgver-r$pkgrel libffi-dev zlib-dev zstd-dev"
 # See https://gitlab.alpinelinux.org/alpine/aports/-/commit/51d2fba931fb2ef0046dea19405a9290c8735051#note_234651
 [ -z "$BOOTSTRAP" ] && depends_dev="$depends_dev $pkgname-test-utils=$pkgver-r$pkgrel"
-makedepends_host="$depends_dev binutils-dev libxml2-dev"
-makedepends_build="cmake chrpath python3 py3-setuptools samurai"
+makedepends_host="$depends_dev binutils-dev curl-dev libxml2-dev"
+makedepends_build="chrpath cmake python3 py3-setuptools samurai"
 # diffutils for diff: unrecognized option: strip-trailing-cr
 # coreutils for 'od' binary
 checkdepends="bash coreutils diffutils"
@@ -163,6 +163,7 @@ build() {
 		-DLLVM_BUILD_LLVM_DYLIB=ON \
 		-DLLVM_BUILD_TESTS="$(want_check && echo ON || echo OFF)" \
 		-DLLVM_ENABLE_ASSERTIONS=OFF \
+		-DLLVM_ENABLE_CURL=FORCE_ON \
 		-DLLVM_ENABLE_DUMP=ON \
 		-DLLVM_ENABLE_EH=ON \
 		-DLLVM_ENABLE_FFI=ON \
