--- a/main/llvm17/APKBUILD
+++ b/main/llvm17/APKBUILD
@@ -11,7 +11,7 @@ pkgver=17.0.6
 _majorver=${pkgver%%.*}
 _prevmajorver=$((_majorver - 1))
 pkgname=$_pkgname$_majorver
-pkgrel=1
+pkgrel=2
 pkgdesc="Low Level Virtual Machine compiler system, version $_majorver"
 arch="all"
 url="https://llvm.org/"
@@ -19,8 +19,8 @@ license="Apache-2.0"
 depends_dev="$pkgname=$pkgver-r$pkgrel libffi-dev zlib-dev zstd-dev"
 # See https://gitlab.alpinelinux.org/alpine/aports/-/commit/51d2fba931fb2ef0046dea19405a9290c8735051#note_234651
 [ -z "$BOOTSTRAP" ] && depends_dev="$depends_dev $pkgname-test-utils=$pkgver-r$pkgrel"
-makedepends_host="$depends_dev binutils-dev libxml2-dev"
-makedepends_build="cmake chrpath python3 py3-setuptools samurai"
+makedepends_host="$depends_dev binutils-dev curl-dev libxml2-dev"
+makedepends_build="chrpath cmake python3 py3-setuptools samurai"
 # diffutils for diff: unrecognized option: strip-trailing-cr
 # coreutils for 'od' binary
 checkdepends="bash coreutils diffutils"
@@ -57,7 +57,7 @@ if [ "$CBUILD" != "$CHOST" ]; then
 		_llvm_tblgen="llvm$_majorver-tblgen"
 	fi
 	makedepends_build="$makedepends_build cmd:$_llvm_tblgen"
-	cmake_cross_options="
+	_cmake_cross_options="
 		-DCMAKE_CROSSCOMPILING=ON
 		-DLLVM_TABLEGEN=/usr/bin/$_llvm_tblgen
 	"
@@ -139,6 +139,7 @@ build() {
 		-DLLVM_BUILD_LLVM_DYLIB=ON \
 		-DLLVM_BUILD_TESTS="$(want_check && echo ON || echo OFF)" \
 		-DLLVM_ENABLE_ASSERTIONS=OFF \
+		-DLLVM_ENABLE_CURL=FORCE_ON \
 		-DLLVM_ENABLE_DUMP=ON \
 		-DLLVM_ENABLE_EH=ON \
 		-DLLVM_ENABLE_FFI=ON \
@@ -156,7 +157,7 @@ build() {
 		-DLLVM_INSTALL_UTILS=ON \
 		-DLLVM_LINK_LLVM_DYLIB=ON \
 		-DLLVM_USE_PERF=ON \
-		$cmake_cross_options
+		$_cmake_cross_options
 
 	cmake --build build
 
