community/wpewebkit: fix build, use llvm19

--- a/community/wpewebkit/APKBUILD
+++ b/community/wpewebkit/APKBUILD
@@ -7,7 +7,7 @@ pkgdesc="WebKit port optimized for embedded devices"
 url="https://wpewebkit.org/"
 arch="all"
 license="other"
-_llvmver=18
+_llvmver=19
 makedepends="
 	at-spi2-core-dev
 	bubblewrap
@@ -47,6 +47,7 @@ makedepends="
 subpackages="$pkgname-dev $pkgname-doc"
 source="https://wpewebkit.org/releases/wpewebkit-$pkgver.tar.xz
 	armv6kz.patch
+	gettext.patch
 	"
 options="!check"
 
@@ -54,7 +55,7 @@ case "$CARCH" in
 s390x|riscv64)
 	;;
 *)
-	makedepends="$makedepends lld$_llvmver"
+	makedepends="$makedepends lld"
 	;;
 esac
 
@@ -113,4 +114,5 @@ package() {
 sha512sums="
 459921bc383dd4618bc206ecf007b6d48b4e099037685b68cf2734d58456ab2faa5b9030c1a246d0006ebaf33842cbb1d8c286d7d96ba0cc9a3b7c79daafad5d  wpewebkit-2.46.6.tar.xz
 8c89d4ac737a2bd6d970fec3ecb9d0b72d61ffb9a37d4b0b56bc0106914398a65319e940c593c0305fc40d6900aac2a8b4fc3bafc9a96062063d15abd1f5039d  armv6kz.patch
+f84c737a3d31453ba266f45c7b43803bbeb5d8b62e6e23005e1775d4ae2d7215614d1233c25b9953387027cea8e1f10a3dd904417333750c763cd61c9c7bc379  gettext.patch
 "
