*/*: use backend independant cmake commands

--- a/community/direwolf/APKBUILD
+++ b/community/direwolf/APKBUILD
@@ -21,13 +21,12 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/wb2osz/direwolf/archive/refs
 
 build() {
 	cmake -B build -DCMAKE_INSTALL_PREFIX=/usr
-
-	make -C build
+	cmake --build build
 }
 
 package() {
-	make -C build DESTDIR="$pkgdir" install
-	make -C build DESTDIR="$pkgdir" install-conf
+	DESTDIR="$pkgdir" cmake --install build
+	DESTDIR="$pkgdir" cmake --build build --target install-conf
 
 	rm -r "${pkgdir:?}"/etc
 	rm -r "${pkgdir:?}"/usr/share/doc/direwolf/*.pdf
