--- a/community/libcue/APKBUILD
+++ b/community/libcue/APKBUILD
@@ -20,7 +20,7 @@ build() {
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DBUILD_SHARED_LIBS=true
-	make -C build
+	cmake --build build
 }
 
 check() {
@@ -29,7 +29,7 @@ check() {
 }
 
 package() {
-	make -C build DESTDIR="$pkgdir" install
+	DESTDIR="$pkgdir" cmake --install build
 }
 
 sha512sums="
