--- a/community/libftdi1/APKBUILD
+++ b/community/libftdi1/APKBUILD
@@ -29,7 +29,7 @@ build() {
 }
 
 package() {
-	DESTDIR="$pkgdir" cmake --build build --target install
+	DESTDIR="$pkgdir" cmake --install build
 	install -Dm644 packages/99-libftdi.rules \
 		"$pkgdir"/usr/lib/udev/rules.d/99-$pkgname.rules
 }
