--- a/community/libgme/APKBUILD
+++ b/community/libgme/APKBUILD
@@ -9,7 +9,7 @@ arch="all"
 license="LGPL-2.1-only"
 makedepends="cmake zlib-dev"
 subpackages="$pkgname-dev"
-options="!check" # make check not implemented
+options="!check" # ctest not implemented
 source="$pkgname-$pkgver.tar.xz::https://bitbucket.org/mpyne/game-music-emu/downloads/game-music-emu-$pkgver.tar.xz
 	ppc-musl.patch
 	"
@@ -26,11 +26,11 @@ build() {
 		-DCMAKE_BUILD_TYPE=None \
 		-DENABLE_UBSAN=OFF \
 		$CMAKE_CROSSOPTS
-	make -C build
+	cmake --build build
 }
 
 package() {
-	make -C build DESTDIR="$pkgdir" install
+	DESTDIR="$pkgdir" cmake --install build
 }
 
 sha512sums="
