--- a/community/pekwm/APKBUILD
+++ b/community/pekwm/APKBUILD
@@ -17,7 +17,7 @@ build() {
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_BUILD_TYPE=None \
 		-DTESTS="$(want_check && echo ON || echo OFF)"
-	make -C build
+	cmake --build build
 }
 
 check() {
@@ -25,7 +25,7 @@ check() {
 }
 
 package() {
-	make -C build DESTDIR="$pkgdir" install
+	DESTDIR="$pkgdir" cmake --install build
 }
 
 sha512sums="
