--- a/community/qhull/APKBUILD
+++ b/community/qhull/APKBUILD
@@ -27,7 +27,7 @@ build() {
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_SKIP_INSTALL_RPATH=YES \
 		$CMAKE_CROSSOPTS
-	make -C build all libqhull
+	cmake --build build --target all libqhull
 }
 
 check() {
@@ -35,7 +35,7 @@ check() {
 }
 
 package() {
-	make -C build DESTDIR="$pkgdir" install
+	DESTDIR="$pkgdir" cmake --install build
 	mv build/libqhull.so* "$pkgdir"/usr/lib/
 
 	install -Dm644 $builddir/COPYING.txt $pkgdir/usr/share/licenses/$pkgname/LICENSE
