--- a/community/ud/APKBUILD
+++ b/community/ud/APKBUILD
@@ -11,7 +11,7 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/xyproto/ud/archive/refs/tags
 
 build() {
 	cmake -B build -S .
-	make -C build
+	cmake --build build
 }
 
 check() {
