--- a/testing/ecos/APKBUILD
+++ b/testing/ecos/APKBUILD
@@ -22,7 +22,7 @@ build() {
 		-DBUILD_SHARED_LIBS=True \
 		-DCMAKE_BUILD_TYPE=MinSizeRel \
 		$CMAKE_CROSSOPTS .
-	make -C build
+	cmake --build build
 }
 
 check() {
@@ -31,7 +31,7 @@ check() {
 }
 
 package() {
-	make DESTDIR="$pkgdir" -C build install
+	DESTDIR="$pkgdir" cmake --install build
 }
 
 sha512sums="
