--- a/testing/fluent-bit/APKBUILD
+++ b/testing/fluent-bit/APKBUILD
@@ -58,15 +58,15 @@ build() {
 		-DFLB_TLS=Yes \
 		-DFLB_HTTP_SERVER=Yes \
 		$CMAKE_CROSSOPTS .
-	make -C build
+	cmake --build build
 }
 
 check() {
-	make -C build test
+	ctest --test-dir build
 }
 
 package() {
-	make -C build DESTDIR="$pkgdir" install
+	DESTDIR="$pkgdir" cmake --install build
 
 	install -Dm755 "$srcdir"/$pkgname.initd \
 		"$pkgdir"/etc/init.d/$pkgname
