--- a/testing/libuecc/APKBUILD
+++ b/testing/libuecc/APKBUILD
@@ -17,11 +17,11 @@ build() {
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		.
-	make -C build
+	cmake --build build
 }
 
 package() {
-	make -C build DESTDIR="$pkgdir" install
+	DESTDIR="$pkgdir" cmake --install build
 	rm -f "$pkgdir"/usr/lib/*.a
 }
 
