--- a/testing/libvdpau-va-gl/APKBUILD
+++ b/testing/libvdpau-va-gl/APKBUILD
@@ -21,11 +21,11 @@ build() {
 		-DBUILD_SHARED_LIBS=True \
 		-DCMAKE_BUILD_TYPE=None \
 		$CMAKE_CROSSOPTS .
-	make -C build
+	cmake --build build
 }
 
 package() {
-	make -C build DESTDIR="$pkgdir" install
+	DESTDIR="$pkgdir" cmake --install build
 }
 
 sha512sums="074f06a0684a28dfd2690d7f878d1e1c1a6a61cb4fba00b54c4b01e9da7baa627333fb59715de0dfb757637afb269c1a62caa3955d53cea75f4a9513c4286680  libvdpau-va-gl-0.4.2.tar.gz"
