--- a/testing/libwbxml/APKBUILD
+++ b/testing/libwbxml/APKBUILD
@@ -21,15 +21,15 @@ build() {
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DENABLE_UNIT_TEST=ON \
 		$CMAKE_CROSSOPTS
-	make -C build
+	cmake --build build
 }
 
 check() {
-	make -C build test
+	ctest --test-dir build
 }
 
 package() {
-	make -C build DESTDIR="$pkgdir" install
+	DESTDIR="$pkgdir" cmake --install build
 
 	mkdir -p "$pkgdir"/usr/lib
 	mv "$pkgdir"/usr/share/cmake "$pkgdir"/usr/lib
