--- a/testing/lwan/APKBUILD
+++ b/testing/lwan/APKBUILD
@@ -25,15 +25,15 @@ build() {
 		-DCMAKE_VERBOSE_MAKEFILE=ON \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DBUILD_SHARED_LIBS=ON
-	make -C build
+	cmake --build build
 }
 
 check() {
-	make -C build testsuite -j1
+	cmake --build build --target testsuite -j1
 }
 
 package() {
-	make -C build DESTDIR="$pkgdir" install
+	DESTDIR="$pkgdir" cmake --install build
 	rm -f "$pkgdir"/usr/lib/*.a
 }
 
