--- a/testing/solarus-engine/APKBUILD
+++ b/testing/solarus-engine/APKBUILD
@@ -48,7 +48,7 @@ build() {
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_BUILD_TYPE=Release \
 		-DSOLARUS_GUI=ON
-	make -C build/
+	cmake --build build
 }
 
 check() {
@@ -56,7 +56,7 @@ check() {
 }
 
 package() {
-	make -C build DESTDIR="$pkgdir" install
+	DESTDIR="$pkgdir" cmake --install build
 }
 
 sha512sums="
