--- a/community/qjson/APKBUILD
+++ b/community/qjson/APKBUILD
@@ -22,7 +22,7 @@ build() {
 		-DCMAKE_BUILD_TYPE=None \
 		-DQJSON_BUILD_TESTS="$(want_check && echo ON || echo OFF)" \
 		. $CMAKE_CROSSOPTS
-	make -C build
+	cmake --build build
 }
 
 check() {
@@ -30,7 +30,7 @@ check() {
 }
 
 package() {
-	make -C build DESTDIR="$pkgdir" install
+	DESTDIR="$pkgdir" cmake --install build
 }
 
 sha512sums="
