--- a/testing/crazydiskinfo/APKBUILD
+++ b/testing/crazydiskinfo/APKBUILD
@@ -23,15 +23,15 @@ build() {
 		-DBUILD_SHARED_LIBS=True \
 		-DCMAKE_BUILD_TYPE=None \
 		$CMAKE_CROSSOPTS .
-	make -C build
+	cmake --build build
 }
 
 check() {
-	make -C build check
+	ctest --test-dir build
 }
 
 package() {
-	make -C build DESTDIR="$pkgdir" install
+	DESTDIR="$pkgdir" cmake --install build
 }
 
 sha512sums="57e9ea4f8abec18355806da35225132f06a5562b1717e6dca1515043b2a0f2a51b47a2bcda31f1e64d6b2e9c8c6de5445d835f59eed79fd0911e06fd32296803  crazydiskinfo-1.1.0.tar.gz
