testing/{uclient,ustream-ssl}: please linter

--- a/testing/uclient/APKBUILD
+++ b/testing/uclient/APKBUILD
@@ -6,14 +6,13 @@ pkgdesc="ustream-based HTTP client library"
 url="https://git.openwrt.org/project/uclient.git"
 arch="all"
 license="ISC"
-depends=""
 depends_dev="libubox-dev ustream-ssl-dev"
 makedepends="cmake $depends_dev"
 subpackages="$pkgname-dev $pkgname-fetch:_fetch"
 _owrtgit=6a6011df
-_owrtver="${pkgver:0:4}-${pkgver:4:2}-${pkgver:6:2}-${_owrtgit}"
-source="https://sources.openwrt.org/uclient-${_owrtver}.tar.xz"
-builddir="$srcdir/uclient-${_owrtver}"
+_owrtver="${pkgver:0:4}-${pkgver:4:2}-${pkgver:6:2}-$_owrtgit"
+source="https://sources.openwrt.org/uclient-$_owrtver.tar.xz"
+builddir="$srcdir/uclient-$_owrtver"
 
 build() {
 	if [ "$CBUILD" != "$CHOST" ]; then
