--- a/testing/ustream-ssl/APKBUILD
+++ b/testing/ustream-ssl/APKBUILD
@@ -6,14 +6,13 @@ pkgdesc="ustream SSL library"
 url="https://git.openwrt.org/project/ustream-ssl.git"
 arch="all"
 license="ISC"
-depends=""
 depends_dev="libubox-dev openssl-dev"
 makedepends="cmake $depends_dev"
 subpackages="$pkgname-dev"
 _owrtgit=868fd881
-_owrtver="${pkgver:0:4}-${pkgver:4:2}-${pkgver:6:2}-${_owrtgit}"
-source="https://sources.openwrt.org/ustream-ssl-${_owrtver}.tar.xz"
-builddir="$srcdir/ustream-ssl-${_owrtver}"
+_owrtver="${pkgver:0:4}-${pkgver:4:2}-${pkgver:6:2}-$_owrtgit"
+source="https://sources.openwrt.org/ustream-ssl-$_owrtver.tar.xz"
+builddir="$srcdir/ustream-ssl-$_owrtver"
 
 build() {
 	if [ "$CBUILD" != "$CHOST" ]; then
