--- a/community/pdf4qt/APKBUILD
+++ b/community/pdf4qt/APKBUILD
@@ -1,11 +1,11 @@
 # Maintainer: Antoine Martin (ayakael) <dev@ayakael.net>
 pkgname=pdf4qt
 pkgver=1.3.7
-pkgrel=0
+pkgrel=1
 pkgdesc="Open source PDF editor"
 arch="all"
 url="https://jakubmelka.github.io/"
-license="LGPL-3.0"
+license="LGPL-3.0-or-later"
 # opt depends:
 # 'flite: Text-To-Speech using flite synthesizer',
 # 'libspeechd: Text-To-Speech using speechd synthesizer'
