--- a/testing/qtmir/APKBUILD
+++ b/testing/qtmir/APKBUILD
@@ -2,8 +2,8 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Luca Weiss <luca@lucaweiss.eu>
 pkgname=qtmir
-pkgver=0.7.2
-pkgrel=3
+pkgver=0.7.2_git20250407
+pkgrel=0
 pkgdesc="QPA plugin to make Qt a Mir server"
 # armhf: blocked by lots of dependencies
 arch="all !armhf"
@@ -30,14 +30,11 @@ checkdepends="
 	dbus
 	py3-dbusmock
 	"
-source="https://gitlab.com/ubports/development/core/qtmir/-/archive/$pkgver/qtmir-$pkgver.tar.gz
-	0001-Wayland-hack-set-maliit-server-to-inputmethod-type-W.patch
-	0002-Squash-of-miroil-patches.patch
-	0003-Require-miroil-in-out-.pc-file.patch
-	0004-Update-for-Mir-2.15-removals.patch
-	"
+_commit="ea2f4774b1a109fec3e22a021fb21ff60da80626" # personal/sunweaver/debian-upstream
+source="https://gitlab.com/ubports/development/core/qtmir/-/archive/$_commit/qtmir-$_commit.tar.gz"
 subpackages="$pkgname-dev"
 options="!check" # -DWITH_MIR2=ON currently disables tests
+builddir="$srcdir/qtmir-$_commit"
 
 _cmake_opts=""
 case "$CARCH" in
@@ -82,9 +79,5 @@ package() {
 }
 
 sha512sums="
-17b59f4056b3dd7509201a3d575c3c018f278e9e08fdef3d38049f95b48389f87a6154d569db242e705f68d6b09916319f4d9d6ee3b3e5faea0299a9d9770d83  qtmir-0.7.2.tar.gz
-f6481e3fff1b00066d2292e8273bd1dc5759d65e8eb5dba5e1400ba4570663933a8ed5e42bbf0207a96a9733b30256c1ee70055f25d93fcb862dff72e9bc0d1d  0001-Wayland-hack-set-maliit-server-to-inputmethod-type-W.patch
-bd783233deb19bb1feda66b30c57fa565482c809f161d2065da882fd497d3f8f8678e0414a181e2386c2b633a0099e0e80d4f1057623abfff817b6619100b724  0002-Squash-of-miroil-patches.patch
-b99d9c84921e8374e6596825de9b3ed120d461b2a2627cf98bb31b306db6f49a919e5a1f40eb0ffdb4986ea463d6e90a6bd3c29c5ed4147c6c6b1bd85628501d  0003-Require-miroil-in-out-.pc-file.patch
-d828204c95458d33ffd6364c3a25a8151fc1503ed81415655a86dbc1cd4d47a2ba5b0d6d30d9f17416a82901ec250b22e09fbbd367f3c63094b2d8a83cb3518a  0004-Update-for-Mir-2.15-removals.patch
+55c64bcd556ee756f10d0d9af53f27ece1d446ece302882e52dab8cb5aef908b5784a4667ea8cb543f27bf6bc9246804f45e5865c8f560d651a5edc3696fef43  qtmir-ea2f4774b1a109fec3e22a021fb21ff60da80626.tar.gz
 "
