testing/lomiri: rebuild against new qtmir
Add a patch to compile using C++20 due to updated Mir headers.

--- a/testing/lomiri/APKBUILD
+++ b/testing/lomiri/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Luca Weiss <luca@lucaweiss.eu>
 pkgname=lomiri
 pkgver=0.4.0
-pkgrel=0
+pkgrel=1
 pkgdesc="A convergent desktop environment"
 # armhf: blocked by lomiri-ui-toolkit
 # riscv64: blocked by lomiri-indicator-network
@@ -60,6 +60,7 @@ source="https://gitlab.com/ubports/development/core/lomiri/-/archive/$pkgver/lom
 	0004-Disable-lightdm-integration.patch
 	0005-Change-hard-coded-launcher-logo-to-one-set-by-a-reso.patch
 	0006-Use-Mir-2.x.patch
+	0007-Build-with-C-20.patch
 	home.svg
 	"
 subpackages="$pkgname-lang"
@@ -108,5 +109,6 @@ b4fd41d0e4231f8dc00dd289e15f9adf07b22b6436d572754a0aac3e1705db2f0856f2de9cc2f061
 ae4b517260fabf64566da6ed156121363f987a73afde98bb355df5fbb756f4ce290ce53842257cd6631a8b10d3fbe22f7213ef282377540798d467fbbd9b9312  0004-Disable-lightdm-integration.patch
 5f5a45cbaa1453218c5d1d219a0b29f13a5d5e55d222f35facc3e4ee655afb2bb201d99291dd4cd786125eddd1de1901b6cdee681b9c77a450c9e5292504fb9d  0005-Change-hard-coded-launcher-logo-to-one-set-by-a-reso.patch
 80997035cae1debff4f2421b431ae67dd51f99718a385ac5a679a96339ed7872d59c75b394274166340a012377d7de3563706ab0b3b7dd7787f6462d2b14d3f7  0006-Use-Mir-2.x.patch
+4bee2df454ea9b1d50056ce1e54803374d960e15b902985cb4af78779d2f4ad47283d3dd3d39db829aa1bd4d0de517e64c8fda27c6635a17b1e400a00bb5e157  0007-Build-with-C-20.patch
 8be30a5e7692c39ffb1948910b45d8fa69a88725df45b67ba69711281b3cf15568b9fff29a8b5b216e5e86656b5961ad7ef9eb0e87c007215e012c3a663045b7  home.svg
 "
