community/rpm: fix build with ninja cmake backend

--- a/community/rpm/APKBUILD
+++ b/community/rpm/APKBUILD
@@ -52,6 +52,7 @@ subpackages="
 	"
 source="https://ftp.osuosl.org/pub/rpm/releases/rpm-$_majorver.x/rpm-$pkgver.tar.bz2
 	fix-glibc-glob.patch
+	targets.patch
 	"
 
 # secfixes:
@@ -129,4 +130,5 @@ scripts() {
 sha512sums="
 3364c453c29903c144a3680ceca7a17426eb085c288b6313fb7e857a42a5e0a965f623882e0f58e633f8b8770e839d9df9f7653d99c73759af5c89d0a981908d  rpm-4.19.1.1.tar.bz2
 2db5afbbc25088f1c64cf9d34e1823faefaa4bd39729a406123129407019eac4964733a20645815221a5abfa304afb3655219d261b18876ed4bef1cac5aaeed1  fix-glibc-glob.patch
+ca75b07ae7abeb688aefca9c48c48556d5153e47ca376502ad92ed2f36ba175ecb93702767db82fe4774f19f5d68a6654c7a17ad0f163b7b8ae86d811876fccf  targets.patch
 "
