community/valhalla: fix build with ninja cmake backend

--- a/community/valhalla/APKBUILD
+++ b/community/valhalla/APKBUILD
@@ -28,6 +28,7 @@ subpackages="$pkgname-dev $pkgname-doc"
 source="https://dev.alpinelinux.org/archive/valhalla/valhalla-$pkgver.tar.gz
 	0001-libvalhalla-configuring.patch
 	gcc13.patch
+	target.patch
 	"
 builddir="$srcdir/$pkgname"
 # check: localedef: command not found
@@ -85,4 +86,5 @@ sha512sums="
 94bda83499d975bf8cb04db4bb226e081b03174bdbff2cdf79570632999d89c72772fb6b366a64615398fad0b684a3803612a8550bc3f324979127dcafc2828d  valhalla-3.1.4.tar.gz
 7bec6abe6d203cf654f32b841268f99a83cb29eb300499bb19f7eacf22730511b3337116d9acedbc2cad33455f5759f9248d5ba1a15ed5e7ec49dddfce4e35ce  0001-libvalhalla-configuring.patch
 4448f0966f3c8e66403a485e44b3cab7bad0fefae9300db6dc8f96852cdf8e769528b6cd890d533b0991c12c69d3eb7ba111f2f61fd8f1da3b7a12a2f4d6b690  gcc13.patch
+d11f99d54c774dfe3f49b652f205a6ef2545ef20b8da13b63a78c8094ad6c8c75fadc301bf7a511bcdf4e087dbafe37b52613b6d45cfdc5239e0040987b5491f  target.patch
 "
