community/meek: enable on loongarch64
update refraction-networking/utls to 1.6.7
see:https://github.com/refraction-networking/utls/pull/106

--- a/community/meek/APKBUILD
+++ b/community/meek/APKBUILD
@@ -5,8 +5,7 @@ pkgver=0.38.0
 pkgrel=11
 pkgdesc="Pluggable transport proxy written in Go"
 url="https://trac.torproject.org/projects/tor/wiki/doc/meek"
-# loongarch64: fails to build -> rerefraction-networking/utls
-arch="all !loongarch64"
+arch="all"
 license="CC0-1.0"
 depends="ca-certificates"
 makedepends="go libcap-utils"
@@ -16,6 +15,7 @@ subpackages="
 	"
 source="https://gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/meek/-/archive/v$pkgver/meek-v$pkgver.tar.bz2
 	binary-location.patch
+	update_refraction-networking_utls.patch
 	"
 builddir="$srcdir/meek-v$pkgver"
 # no test suite available
@@ -61,4 +61,5 @@ server() {
 sha512sums="
 2ee2461b1e4174b555530dc4a3a85513ea0fdd741dc0708954a08794110343a09a8dff3d855c3c5788f212701f49ed67f9a442b9d064655f6c9760ea5e083b9f  meek-v0.38.0.tar.bz2
 4399f76cd31c3be0e28b6ac82059c4fc66f5e720c65e2f51922041a5b08a5f9f1959871055727bf068f4b621629c943e9d97368d6af3db8a8e1c9cdf5edc043c  binary-location.patch
+05a1e65f290549c689d1c4855968e9a278c1d9671586883fe7002267bf700e172c10cf1eea350ca00e66baf3b07b52a71a2641fd69775b1679fc64ba5fee8955  update_refraction-networking_utls.patch
 "
