community/py3-chaospy: upgrade to 4.3.19

--- a/community/py3-chaospy/APKBUILD
+++ b/community/py3-chaospy/APKBUILD
@@ -2,11 +2,12 @@
 # Maintainer: Will Sinatra <wpsinatra@gmail.com>
 pkgname=py3-chaospy
 _pkgorig=chaospy
-pkgver=4.3.18
+pkgver=4.3.19
 pkgrel=0
 pkgdesc="Numerical tool for performing uncertainty quantification"
 url="https://github.com/jonathf/chaospy"
-arch="noarch !x86 !armhf !armv7 !s390x !ppc64le" # assertion errors and py3-numpoly
+# significant test failure on armv7 armhf x86
+arch="noarch !armv7 !armhf !x86"
 license="MIT"
 depends="
 	python3
@@ -23,9 +24,7 @@ makedepends="
 	py3-wheel
 	"
 subpackages="$pkgname-pyc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/jonathf/chaospy/archive/refs/tags/v$pkgver.tar.gz
-	importlib.patch
-	"
+source="$pkgname-$pkgver.tar.gz::https://github.com/jonathf/chaospy/archive/refs/tags/v$pkgver.tar.gz"
 builddir="$srcdir/$_pkgorig-$pkgver"
 
 build() {
@@ -44,6 +43,5 @@ package() {
 }
 
 sha512sums="
-3a262a907c4565269aae26df2bcec4ec75cf9d88f45552953a2143a92c1a8c990b90576924abacb7a1b80c5f0775751eaaff32594e1585ad22600b9e05002d8f  py3-chaospy-4.3.18.tar.gz
-5b76498a070d2864613fe0e2a29506c6a02bdb2248c842b38cf08eebcdc64fffc07f890644ee3d962a584ad83237b99bafe27dc926082ed4a904254aa6d6bc04  importlib.patch
+a3e415a55fd1e2b8afaf09c56ccb5ef11dfef8763e56427e1198e3882adec952e44f6c08a852f7ea923e1e9c02978fc5888776c611255b4a1483057b938bfa70  py3-chaospy-4.3.19.tar.gz
 "
