--- a/testing/hpnssh/APKBUILD
+++ b/testing/hpnssh/APKBUILD
@@ -1,12 +1,13 @@
 # Contributor: Lukas Franek <lukas.franek@ui.com>
 # Maintainer: Lukas Franek <lukas.franek@ui.com>
 pkgname=hpnssh
-pkgver=18.4.1
+pkgver=18.6.2
 pkgrel=0
 pkgdesc="HPNSSH: High performance SSH/SCP"
 url="https://psc.edu/hpn-ssh-home"
 # s390x: libssh is failing to build
-arch="all !s390x"
+# ppc64le: libopenbsd-compat failing to build
+arch="all !s390x !ppc64le"
 license="custom"
 makedepends="
 	autoconf
@@ -45,5 +46,5 @@ package() {
 }
 
 sha512sums="
-46b84dc2a23a20d86c770109ee20b170546966ee55b1636863d92873c2e42a68accfdf4ee6a77cfa1b0af71cee8e2f8e77cbc126330280dd4ca4a572c3cc0626  hpn-18.4.1.tar.gz
+3353cf3df18dd740206210a819cd2b932a8e14a34a77ad847355a5135b60116b30dc2d6f7ddb69a8b1bf5055b94844d55d393b820247f82fd6a88c819d973850  hpn-18.6.2.tar.gz
 "
