--- a/community/imv/APKBUILD
+++ b/community/imv/APKBUILD
@@ -28,6 +28,7 @@ subpackages="$pkgname-doc $pkgname-wayland $pkgname-x11"
 source="$pkgname-$pkgver.tar.gz::https://git.sr.ht/~exec64/imv/archive/v$pkgver.tar.gz
 	move-wayland-and-x11-to-libexec.patch
 	version.patch
+	imv-4.5.0-Link-to-the-common-ICU-library.patch
 	"
 builddir="$srcdir/$pkgname-v$pkgver"
 
@@ -88,4 +89,5 @@ sha512sums="
 5a192e1721b4752ba98de23e4a709904f43cce6954d1bc4a8feb5fb4921b46d497915fb7b2885cf87a65983fe2727c856d6c0c8b0cca2906e4b069e4a4f9c417  imv-4.5.0.tar.gz
 e14260a79083393a5e81933adafe654892d6fc9e33f18eb906e9bcccc4227a9862851e234a0f14b457e87b8a9a7de71168d8b4fa18677b83105ab24bf3dcc60f  move-wayland-and-x11-to-libexec.patch
 910880051a25d3dfe6a9dd6fc1db620f09e5bdcef90fff17509d3fc8252cbde3797c52848857d6dbfc47c4231a8152e55bd87bec846dbbdc9e9429091c27fb5c  version.patch
+32ec93776fccfc333cfa3c2f49c850a7300effa2ac38487d27659b523f0feb63e6edff02ea82fc40e8a3f9bfcc83f31d54933c0682ade3ab566a1519f372cfd0  imv-4.5.0-Link-to-the-common-ICU-library.patch
 "
