--- a/community/pdf4qt/APKBUILD
+++ b/community/pdf4qt/APKBUILD
@@ -3,7 +3,8 @@ pkgname=pdf4qt
 pkgver=1.3.7
 pkgrel=1
 pkgdesc="Open source PDF editor"
-arch="all"
+# armhf blocked by qt6-qtdeclarative
+arch="all !armhf"
 url="https://jakubmelka.github.io/"
 license="LGPL-3.0-or-later"
 # opt depends:
