testing/mjpg-streamer: add missing include

--- a/testing/mjpg-streamer/APKBUILD
+++ b/testing/mjpg-streamer/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: George Hopkins <george-hopkins@null.net>
 pkgname=mjpg-streamer
 pkgver=0_git20210220
-pkgrel=1
+pkgrel=2
 _commit="310b29f4a94c46652b20c4b7b6e5cf24e532af39"
 pkgdesc="MJPEG streaming application for Linux-UVC compatible webcams"
 url="https://github.com/jacksonliam/mjpg-streamer"
@@ -13,6 +13,7 @@ options="!check" # no test suite
 source="
 	$pkgname-$_commit.tar.gz::https://github.com/jacksonliam/mjpg-streamer/archive/$_commit.tar.gz
 	version.patch
+	include.patch
 	"
 builddir="$srcdir/$pkgname-$_commit/mjpg-streamer-experimental"
 
@@ -50,4 +51,5 @@ raspicam() {
 sha512sums="
 e345390a930f51094760b19eccc0f8867ea0693a887669c230f1e9a9af0d38c745548f80896cb0b57c0741647e90384007fa3abdd6eecf9bed96555ae9465900  mjpg-streamer-310b29f4a94c46652b20c4b7b6e5cf24e532af39.tar.gz
 9939f72c5336b801b3efb1ada353b343ef16050ea4600851b48766bc3365016632d79aeafd6e73422dce5d9836946770ff85dbc347986c9a98e6819e45bbd23b  version.patch
+45f3672d43574cd6b941eadc3bf741c61d1481d47e2bd15b0b7f29e2b6fd65ee3a2376912d761cbe7fdca77d456da5fc7dc1708a421c690b01018ef48f02c103  include.patch
 "
