community/tree-sitter: take over maintainership

--- a/community/tree-sitter/APKBUILD
+++ b/community/tree-sitter/APKBUILD
@@ -1,6 +1,6 @@
 # Contributor: TBK <alpine@jjtc.eu>
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
-# Maintainer: TBK <alpine@jjtc.eu>
+maintainer="Matthias Ahouansou <matthias@ahouansou.cz>"
 pkgname=tree-sitter
 pkgver=0.22.2
 pkgrel=2
