community/cppcheck: disable gui on armhf

--- a/community/cppcheck/APKBUILD
+++ b/community/cppcheck/APKBUILD
@@ -12,16 +12,23 @@ makedepends="
 	docbook-xsl
 	pcre-dev
 	python3
-	qt6-qtcharts-dev
-	qt6-qttools-dev
 	samurai
 	tinyxml2-dev
 	"
-subpackages="$pkgname-doc $pkgname-htmlreport::noarch $pkgname-gui"
+subpackages="$pkgname-doc $pkgname-htmlreport::noarch"
 source="$pkgname-$pkgver.tar.gz::https://github.com/danmar/cppcheck/archive/refs/tags/$pkgver.tar.gz
 	set_datadir.patch
 	feenableexcept.patch
 	"
+
+case "$CARCH" in
+	armhf) ;; # qt6-qtdeclarative
+	*)
+		makedepends="$makedepends qt6-qtcharts-dev qt6-qttools-dev"
+		subpackages="$subpackages $pkgname-gui"
+		_opts="-DBUILD_GUI=ON -DUSE_QT6=ON -DWITH_QCHART=ON"
+		;;
+esac
 
 build() {
 	make DB2MAN=/usr/share/xml/docbook/xsl-stylesheets-*/manpages/docbook.xsl man
@@ -29,14 +36,12 @@ build() {
 	cmake -B build -G Ninja \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_BUILD_TYPE=MinSizeRel \
-		-DBUILD_GUI=ON \
 		-DBUILD_TESTS="$(want_check && echo ON || echo OFF)" \
 		-DFILESDIR=/usr/share/cppcheck \
 		-DHAVE_RULES=ON \
 		-DUSE_BUNDLED_TINYXML2=OFF \
 		-DUSE_MATCHCOMPILER=On \
-		-DUSE_QT6=ON \
-		-DWITH_QCHART=ON
+		$_opts
 
 	cmake --build build
 }
@@ -56,9 +61,6 @@ package() {
 	DESTDIR="$pkgdir" cmake --install build
 	install -Dm644 cppcheck.1 -t "$pkgdir"/usr/share/man/man1
 	install -Dm755 htmlreport/cppcheck-htmlreport -t "$pkgdir"/usr/bin
-
-	mkdir -p "$pkgdir"/usr/share/cppcheck/lang
-	mv "$pkgdir"/usr/bin/cppcheck*.qm "$pkgdir"/usr/share/cppcheck/lang
 }
 
 htmlreport() {
@@ -73,9 +75,11 @@ gui() {
 	depends="$pkgname=$pkgver-r$pkgrel"
 
 	amove usr/bin/cppcheck-gui
-	amove usr/share/cppcheck/lang
 	amove usr/share/icons
 	amove usr/share/applications
+
+	mkdir -p "$subpkgdir"/usr/share/cppcheck/lang
+	mv "$pkgdir"/usr/bin/cppcheck*.qm "$subpkgdir"/usr/share/cppcheck/lang
 }
 
 sha512sums="
