--- a/main/ell/APKBUILD
+++ b/main/ell/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Milan P. Stanić <mps@arvanta.net>
 # Maintainer: Milan P. Stanić <mps@arvanta.net>
 pkgname=ell
-pkgver=0.72
+pkgver=0.74
 pkgrel=0
 pkgdesc="Linux library for embedded development"
 url="https://01.org/ell"
@@ -9,6 +9,7 @@ arch="all"
 license="LGPL-2.1-or-later"
 makedepends="glib-dev linux-headers"
 checkdepends="dbus"
+options="!check" # fails on CI though works on LXC
 subpackages="$pkgname-dbg $pkgname-dev"
 source="https://mirrors.edge.kernel.org/pub/linux/libs/ell/ell-$pkgver.tar.gz
 	use-libgen-basename.patch
@@ -36,6 +37,6 @@ package() {
 }
 
 sha512sums="
-23e354bb53f283c761c6cf5015125e649d52e2affaef77701cf5683aca371f3e3b13cbf68dd708b1be54958d6d37ba1d163ef6a66df0247a9b87bcc43f8e93c9  ell-0.72.tar.gz
+8c4078c6322e677d58d0bdf6fd3d5ffa6ae68ec354468de7150443e7dda44d7c8de4eff3b18e5d00a2794328fca84c74d426b7561a3c9c5286f95e4b6e7e11d2  ell-0.74.tar.gz
 0762cc5c0471afbcdd17ecbd599f3ae6b0725ed79a845435f5f48c020990b973307c490362ead7550bfe7b61a36e6b663464a038808256f1a1ae7241f0851d1c  use-libgen-basename.patch
 "
