main/openrc: provide subpackage with pam_openrc.so
This allows autostarting of OpenRC user services, if PAM is available.
Since BusyBox login does not support PAM, this feature is disabled by
default.

--- a/main/openrc/APKBUILD
+++ b/main/openrc/APKBUILD
@@ -2,12 +2,12 @@
 pkgname=openrc
 pkgver=0.60.1
 _ver=${pkgver/_git*/}
-pkgrel=0
+pkgrel=1
 pkgdesc="OpenRC manages the services, startup and shutdown of a host"
 url="https://github.com/OpenRC/openrc"
 arch="all"
 license="BSD-2-Clause"
-depends="ifupdown-any"
+depends="ifupdown-any openrc-user=$pkgver-r$pkgrel"
 makedepends_host="bsd-compat-headers libcap-dev linux-headers"
 makedepends_build="meson scdoc"
 checkdepends="sed"
@@ -18,6 +18,7 @@ subpackages="
 	$pkgname-static
 	$pkgname-dev
 	$pkgname-init:openrc_init
+	$pkgname-user:_user
 	agetty-openrc:_agetty_openrc:noarch
 	$pkgname-bash-completion
 	$pkgname-zsh-completion
@@ -57,6 +58,11 @@ options="!check" # not updated to meson build system, require makefile build
 provides="ifupdown-ng-openrc=0.12.1-r4"
 replaces="alpine-baselayout" # due to move of mkmntdirs
 
+if [ -z "$BOOTSTRAP" ]; then
+	makedepends_host="$makedepends_host linux-pam-dev"
+	subpackages="$subpackages $pkgname-user-pam:_user_pam"
+fi
+
 # secfixes:
 #   0.44.6-r1:
 #     - CVE-2021-42341
@@ -70,7 +76,7 @@ prepare() {
 		src/shared/version.in
 }
 
-build() {
+_build() {
 	if [ -z "$BOOTSTRAP" ]; then
 		local lto="-Db_lto=true"
 	fi
@@ -79,14 +85,26 @@ build() {
 		-Dos=Linux \
 		-Dzsh-completions=true \
 		-Dbash-completions=true \
-		-Dpam=false \
 		-Dpkgconfig=true \
 		--default-library=both \
 		--prefix=/ \
 		--bindir=/bin \
 		--sbindir=/sbin \
-		. output
-	meson compile -C output
+		"$@"
+}
+
+build() {
+	_build -Dpam=false output
+	ninja -C output
+
+	if [ -z "$BOOTSTRAP" ]; then
+		_build -Dpam=true output-pam
+
+		# Only (re)compile OpenRC user related files with PAM support
+		# since only those are shipped by the openrc-user-pam subpackage.
+		ninja -C output-pam src/openrc-user/openrc-user \
+			src/pam_openrc/pam_openrc.so
+	fi
 }
 
 check() {
@@ -101,6 +119,17 @@ package() {
 	local i j
 
 	DESTDIR="$pkgdir" meson install --no-rebuild -C output
+
+	# If we are not bootstrapping, also provide a subpackage with
+	# PAM support in openrc-user for autostarting user services.
+	if [ -z "$BOOTSTRAP" ]; then
+		# Use different binary name for openrc-user to avoid a conflict
+		# regarding the debugging symbols provided in the openrc-dbg package.
+		install -D output-pam/src/openrc-user/openrc-user \
+			"$pkgdir"/usr/libexec/rc/bin/openrc-user-pam
+		install -D output-pam/src/pam_openrc/pam_openrc.so \
+			-t "$pkgdir"/usr/lib/security/
+	fi
 
 	# we cannot have anything turned on by default
 	rm -f "$pkgdir"/etc/runlevels/*/*
@@ -173,6 +202,25 @@ openrc_init() {
 	# Alpine does not use openrc as its init by default
 	amove sbin/openrc-init
 	amove sbin/openrc-shutdown
+}
+
+_user() {
+	pkgdesc="OpenRC user services without PAM support"
+	depends=""
+	provider_priority=100 # highest
+
+	amove usr/libexec/rc/bin/openrc-user
+}
+
+_user_pam() {
+	pkgdesc="OpenRC user services with PAM support"
+	depends=""
+	provides="openrc-user=$pkgver-r$pkgrel"
+	provider_priority=1 # lowest
+
+	amove usr/lib/security/pam_openrc.so
+	amove usr/libexec/rc/bin/openrc-user-pam
+	ln -s openrc-user-pam "$subpkgdir"/usr/libexec/rc/bin/openrc-user
 }
 
 sha512sums="
